--- a/website/newsletter/151/index.mdx
+++ b/website/newsletter/151/index.mdx
@@ -8,7 +8,7 @@ image: /img/TWIR_POST.png
 
 Hi everyone!
 
-We've got some great releases this week, with Remotion 4 and Expo SDK 49 in beta. Next.js devs are working on DX optimisations. The articles on React + SVG and VisionCamera are very interesting.
+We've got some great releases this week, with Remotion 4 and Expo SDK 49 in beta. Next.js devs are working on DX optimizations. The articles on React + SVG and VisionCamera are super interesting.
 
 [Remotion 4 is on ProductHunt today](https://www.producthunt.com/posts/remotion-4-0): don't hesitate to vote! 👍
 
@@ -58,7 +58,7 @@ There's also a [launch on ProductHunt](https://www.producthunt.com/posts/remotio
 **[Breaking Up with SVG-in-JS in 2023](https://kurtextrem.de/posts/svg-in-js)**
 
 Very comprehensive article on the various ways of using SVGs in a React app, and their impact on performance.
-Advises against "SVG-in-JS": you should avoid rendering SVG markup via React components and having the SVG code be present in the JS bundle, including via solutions such as the SVGR loader. With a few exceptions, it's best to avoid inlining SVGs in HTML: React Server Components aren't necessarily an ideal solution either. CSS sprites are a good solution.
+Advises against "SVG-in-JS": you should avoid rendering SVG markup via React components and having the SVG code be present in the JS bundle, including via solutions such as the SVGR loader. With a few exceptions, it's best to avoid inlining SVGs in HTML: React Server Components aren't necessarily an ideal solution either. SVG sprites are a good solution.
 
 ---
 
