--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -30,17 +30,17 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Start UI](/emails/issues/144/start_ui.jpg)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
+[![Start UI](/emails/issues/144/start_ui.jpg)](https://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
 
 **[Start UI [web] - Starter UI d’application web](https://github.com/BearStudio/start-ui-web/?utm_source=newsletter&utm_term=this-week-in-react)**
 
 Notre **starter UI d'application Web gratuit et open source** offre un moyen rapide et facile de démarrer votre prochain projet. Il inclut les **bonnes pratiques** et des **outils prêts pour la production** pour vous aider à démarrer immédiatement, vous faisant ainsi gagner du temps et des efforts lors de la phase de setup.
 
-Disponible avec des **fonctionnalités** intégrées : 🔐 authentification, 📱responsive layout, 🧑‍💻 gestion des utilisateurs, 🇫🇷 internationalisation et support right-to-left, 🌚 dark mode et des 🎛 composants avancés pour faciliter le développement. [Essayer la demo](http://demo.start-ui.com/).
+Disponible avec des **fonctionnalités** intégrées : 🔐 authentification, 📱responsive layout, 🧑‍💻 gestion des utilisateurs, 🇫🇷 internationalisation et support right-to-left, 🌚 dark mode et des 🎛 composants avancés pour faciliter le développement. [Essayer la demo](https://demo.start-ui.com/).
 
 Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Query, Storybook et plus encore.
 
-[🚀 Start UI [web] sur GitHub](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
+[🚀 Start UI [web] sur GitHub](https://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
 
 ---
 
