--- a/website/newsletter/115.mdx
+++ b/website/newsletter/115.mdx
@@ -96,7 +96,7 @@ A daily newsletter with three curated technical deep-dives on all things softwar
 
 G2i is the only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being. [Apply to join](https://welcome.g2i.co/apply?campaign=marketing-partner-newsletters&utm_campaign=Marketing%20Partner%20Newsletters&utm_medium=email&utm_source=TWIR) today.
 
-Gabe Greenberg, founder of G2i, has launched a fund on [**developerhealth.org**](http://developerhealth.org/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter) to provide financial assistance for the dev community. Developer are welcome to apply and use the fund for counseling/therapy, paid time between freelance projects, loan assistance, child care services, medical visits and expenses, etc.
+Gabe Greenberg, founder of G2i, has launched a fund on [**developerhealth.org**](https://developerhealth.org/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter) to provide financial assistance for the dev community. Developer are welcome to apply and use the fund for counseling/therapy, paid time between freelance projects, loan assistance, child care services, medical visits and expenses, etc.
 
 ---
 
