--- a/website/newsletter/132/index.mdx
+++ b/website/newsletter/132/index.mdx
@@ -14,7 +14,7 @@ React-Native is not left out with Expo Router in release candidate, Expo Image i
 
 I was invited to the show [Learn With Jason - Create and deploy a documentation website](https://www.learnwithjason.dev/create-and-deploy-a-documentation-website?utm_source=thisweekinreact) in which Jason makes his first steps on Docusaurus.
 
-Discover the [ES.next News newsletter](http://esnextnews.com/?utm_source=thisweekinreact), a good source of information to keep up to date on the evolution of the JavaScript language, the TC39 committee and JS tooling like ESLint, Babel, Bun, Prettier...
+Discover the [ES.next News newsletter](https://esnextnews.com/?utm_source=thisweekinreact), a good source of information to keep up to date on the evolution of the JavaScript language, the TC39 committee and JS tooling like ESLint, Babel, Bun, Prettier...
 
 <!-- truncate -->
 
