--- a/website/newsletter/152/index.mdx
+++ b/website/newsletter/152/index.mdx
@@ -70,7 +70,7 @@ Porkbun offers hundreds of domain extensions for React and React-Native develope
 
 Check out our **AI Generated Search tool** that’s changing the way people look for domain names. All this is backed by **incredible support 365 days a year** plus thousands of real five-star reviews on Trustpilot.
 
-Click the link and [get $1 off your next domain name registration](http://porkbun.com/?coupon=TWIREACT&utm_source=TWIREACT&utm_medium=Newsletter&utm_campaign=twirjune2023) at Porkbun.com!
+Click the link and [get $1 off your next domain name registration](https://porkbun.com/?coupon=TWIREACT&utm_source=TWIREACT&utm_medium=Newsletter&utm_campaign=twirjune2023) at Porkbun.com!
 
 ---
 
