--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -48,6 +48,17 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
+- [SvelteJS: My ecosystem is bigger than yours](https://hackmd.io/@roguegpu/r1RKQMdt3)
+- [Next.js 13 Server Actions](https://www.thisdot.co/blog/next-js-13-server-actions/)
+- [Decoupling UI and Logic in React: A Clean Code Approach with Headless Components](https://itnext.io/decoupling-ui-and-logic-in-react-a-clean-code-approach-with-headless-components-82e46b5820c)
+- [Demystifying React Server Components
+  with NextJS 13 App Router](https://demystifying-rsc.vercel.app/)
+- [Remix Development Tools](https://twitter.com/AlemTuzlak59192/status/1680538200702369794)
+- [A pattern for chaining nextjs middlewares](https://raphael.badia.cc/posts/a-pattern-for-chaining-middlewares)
+- [Embracing Polymorphism for Flexible Components](https://brightinventions.pl/blog/embracing-polymorphism-for-flexible-components/)
+- [Featurevisor](https://github.com/fahad19/featurevisor) + https://featurevisor.com/docs/react/
+- [rmx-cli](https://github.com/kiliman/rmx-cli)
+
 <Todo />
 
 <SubscribeFormEmbed placement="middle" />
@@ -76,7 +87,11 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[Expo SDK 49](https://blog.expo.dev/expo-sdk-49-c6d398cdf740)
+
+---
+
+- [Flashlight measure command](https://twitter.com/almouro/status/1676202443346944000)
 
 ---
 
@@ -102,7 +117,8 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Prettier 3.0](https://prettier.io/blog/2023/07/05/3.0.0.html)
+- [Updates from the 97th TC39 meeting](https://dev.to/hemanth/updates-from-the-97th-tc39-meeting-1cnj)
 
 ---
 
