--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -48,16 +48,37 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
+- [Vercel Platforms Starter Kit - Template for building multi-tenant applications using Next.js App Router](https://vercel.com/blog/platforms-starter-kit)
+- [Trimming typography with Stitches and Capsize](https://www.skovy.dev/blog/using-capsize-with-stitches)
+- [Why Server Components - A Brief History of Web](https://www.perssondennis.com/articles/why-server-components-a-brief-history-of-web)
+- Kuma UI - https://twitter.com/_poteboy_/status/1678237698371485696
+- [5 Common Pitfalls with Server Components in Next13 (with examples)](https://www.propelauth.com/post/5-common-pitfalls-with-server-components-in-next13-with-examples)
+- Ryan Florence Remix flavor of React Server Actions - https://twitter.com/ryanflorence/status/1681100454330249216 + https://twitter.com/ryanflorence/status/1678415165321093120
+- [MDX Editor - React component for markdown editing](https://mdxeditor.dev/)
+- [A Visual Guide to Prefetching in Next.js 13](https://www.builder.io/blog/prefetching-nextjs-visual-guide)
+- [Tailwind Connect 2023 — Keynote](https://www.youtube.com/watch?v=CLkxRnRQtDE): annonce de Catalyst, React UI kit
+- [Artificial Delay](https://buildui.com/recipes/artificial-delay)
+- [My take on the current React & Server Components controversy](https://phryneas.de/react-server-components-controversy) - Lenz Weber-Tronic
+- [Autosave form inputs with Remix](https://www.jacobparis.com/content/remix-form-autosave)
+- [Ariakit is now stable](https://newsletter.ariakit.org/p/stable)
+- Redwood RSC experimental - https://community.redwoodjs.com/t/react-server-components-rsc/5081
+- React-Query-Nextjs - https://twitter.com/TkDodo/status/1680153231853223938
 - [SvelteJS: My ecosystem is bigger than yours](https://hackmd.io/@roguegpu/r1RKQMdt3)
 - [Next.js 13 Server Actions](https://www.thisdot.co/blog/next-js-13-server-actions/)
 - [Decoupling UI and Logic in React: A Clean Code Approach with Headless Components](https://itnext.io/decoupling-ui-and-logic-in-react-a-clean-code-approach-with-headless-components-82e46b5820c)
-- [Demystifying React Server Components
-  with NextJS 13 App Router](https://demystifying-rsc.vercel.app/)
+- [Demystifying React Server Components with NextJS 13 App Router](https://demystifying-rsc.vercel.app/)
 - [Remix Development Tools](https://twitter.com/AlemTuzlak59192/status/1680538200702369794)
 - [A pattern for chaining nextjs middlewares](https://raphael.badia.cc/posts/a-pattern-for-chaining-middlewares)
 - [Embracing Polymorphism for Flexible Components](https://brightinventions.pl/blog/embracing-polymorphism-for-flexible-components/)
 - [Featurevisor](https://github.com/fahad19/featurevisor) + https://featurevisor.com/docs/react/
 - [rmx-cli](https://github.com/kiliman/rmx-cli)
+- [Legend: The Ultimate React State Manager?](https://www.youtube.com/watch?v=E4TH77SMOG8)
+- [Miško Hevery on Qwik versus React](https://www.youtube.com/watch?v=GHsO0t1_P0M)
+- [What's Next For Redux with Mark Erikson?](https://www.youtube.com/watch?v=n5FK8_EXcbs)
+- [Next.js 13.4.10](https://github.com/vercel/next.js/releases/tag/v13.4.10)
+- [Rewind-UI - React-TailwindCSS component library](https://rewind-ui.dev/)
+- [Remix-Hono](https://github.com/sergiodxa/remix-hono)
+- [Remix-JSON-Routes](https://github.com/brophdawg11/remix-json-routes)
 
 <Todo />
 
@@ -89,11 +110,16 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 [Expo SDK 49](https://blog.expo.dev/expo-sdk-49-c6d398cdf740)
 
+[Announcing Expo Router v2](https://blog.expo.dev/introducing-expo-router-v2-3850fd5c3ca1)
+
 ---
 
+- [Reflecting on Code Sharing Between React and React Native](https://matthewwolfe.github.io/blog/code-sharing-react-and-react-native)
+- [A new approach to React Native development and team composition](https://itnext.io/a-new-approach-to-react-native-development-and-team-composition-d6e3e3eb5184)
 - [Flashlight measure command](https://twitter.com/almouro/status/1676202443346944000)
-
----
+- [react-native-image-colors 2.3 - Expo 49 support](https://github.com/osamaqarem/react-native-image-colors)
+- [react-native-android-widget 0.7 - Expo 49 support](https://github.com/sAleksovski/react-native-android-widget)
+- [RNR 271 - RN From a Flutter Dev's Perspective](https://reactnativeradio.com/episodes/rnr-271-rn-from-a-flutter-devs-perspective)
 
 ## 🧑‍💻 Jobs {#jobs}
 
@@ -107,7 +133,7 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Comment faire la veille techno, en tant que dev ?](https://www.youtube.com/watch?v=zED1-b3UJE8)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -117,8 +143,16 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-- [Prettier 3.0](https://prettier.io/blog/2023/07/05/3.0.0.html)
 - [Updates from the 97th TC39 meeting](https://dev.to/hemanth/updates-from-the-97th-tc39-meeting-1cnj)
+- [What’s Next for JavaScript: New Features to Look Forward to](https://thenewstack.io/whats-next-for-javascript-new-features-to-look-forward-to/)
+- [Beyond Browsers: The Longterm Future of JavaScript Standards](https://thenewstack.io/beyond-browsers-the-longterm-future-of-javascript-standards/)
+- [StackBlitz - npm, yarn and pnpm are now supported natively in WebContainers](https://blog.stackblitz.com/posts/announcing-native-package-manager-support/)
+- [In Defence of DOMContentLoaded](https://csswizardry.com/2023/07/in-defence-of-domcontentloaded/)
+- [Prettier 3.0](https://prettier.io/blog/2023/07/05/3.0.0.html)
+- [TypeScript-ESLint v6](https://typescript-eslint.io/blog/announcing-typescript-eslint-v6/)
+- [Node v20.4](https://nodejs.org/en/blog/release/v20.4.0)
+- [Deno 1.35: A fast and convenient way to build web servers](https://deno.com/blog/v1.35)
+- [Prisma 5: Faster by Default](https://www.prisma.io/blog/prisma-5-f66prwkjx72s)
 
 ---
 
