--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -137,7 +137,13 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
+[![Pylote](/emails/issues/149/pylote.jpg)](https://pylote.io/?utm_source=newsletter&utm_medium=insert&utm_campaign=sebastienl)
+
+💸 **[Pylote - L'extension 100% gratuite pour être sur toutes les plateformes de freelance.](https://pylote.io/?utm_source=newsletter&utm_medium=insert&utm_campaign=sebastienl)**
+
+- **Importe** ton profil Comet ou LinkedIn en 5 secondes.
+- **Synchronise** ta dispo et** diffuse** ton profil auprès de 17 cabinets de recrutement : Comet, Crème, Cherry-Pick...
+- **Accède** à un jobboard centralisé regroupant un ensemble de missions.
 
 ---
 
