--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /152
-title: "React Hebdo #152: ..."
+title: "React Hebdo #152: React 18, RSC, Kuma UI, Expo 49, Next.js, Remix DevTools, Fresh, React-Query, Redwood, Catalyst, Million, MDXEditor, Ariakit, Rewind, TC39, Prettier..."
 authors: [slorber]
 date: 07-18-2023
 image: /img/TWIR_POST.png
@@ -9,7 +9,11 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Je rentre de vacances, on couvre donc 2 semaines d'actualités dans cette édition.
+
+Je pensais que l'été serait calme, mais il y a eu pas mal de sorties! 😄
+
+Je cherche toujours un [**stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler!
 
 <!-- truncate -->
 
@@ -48,41 +52,52 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-- [Fresh 1.3 – Simplified Route Components and More](Fresh 1.3 – Simplified Route Components and More)
-- [Vercel Platforms Starter Kit - Template for building multi-tenant applications using Next.js App Router](https://vercel.com/blog/platforms-starter-kit)
-- [Trimming typography with Stitches and Capsize](https://www.skovy.dev/blog/using-capsize-with-stitches)
-- [Why Server Components - A Brief History of Web](https://www.perssondennis.com/articles/why-server-components-a-brief-history-of-web)
-- Kuma UI - https://twitter.com/_poteboy_/status/1678237698371485696 - https://twitter.com/_poteboy_/status/1679760114704846848
-- [5 Common Pitfalls with Server Components in Next13 (with examples)](https://www.propelauth.com/post/5-common-pitfalls-with-server-components-in-next13-with-examples)
-- Ryan Florence Remix flavor of React Server Actions - https://twitter.com/ryanflorence/status/1681100454330249216 + https://twitter.com/ryanflorence/status/1678415165321093120
-- [MDX Editor - React component for markdown editing](https://mdxeditor.dev/)
-- [A Visual Guide to Prefetching in Next.js 13](https://www.builder.io/blog/prefetching-nextjs-visual-guide)
-- [Tailwind Connect 2023 — Keynote](https://www.youtube.com/watch?v=CLkxRnRQtDE): annonce de Catalyst, React UI kit
-- [Artificial Delay](https://buildui.com/recipes/artificial-delay)
-- [My take on the current React & Server Components controversy](https://phryneas.de/react-server-components-controversy) - Lenz Weber-Tronic
-- [Autosave form inputs with Remix](https://www.jacobparis.com/content/remix-form-autosave)
-- [Ariakit is now stable](https://newsletter.ariakit.org/p/stable)
-- Redwood RSC experimental - https://community.redwoodjs.com/t/react-server-components-rsc/5081
-- React-Query-Nextjs - https://twitter.com/TkDodo/status/1680153231853223938
-- [SvelteJS: My ecosystem is bigger than yours](https://hackmd.io/@roguegpu/r1RKQMdt3)
-- [Next.js 13 Server Actions](https://www.thisdot.co/blog/next-js-13-server-actions/)
-- [Decoupling UI and Logic in React: A Clean Code Approach with Headless Components](https://itnext.io/decoupling-ui-and-logic-in-react-a-clean-code-approach-with-headless-components-82e46b5820c)
-- [Demystifying React Server Components with NextJS 13 App Router](https://demystifying-rsc.vercel.app/)
-- [Remix Development Tools](https://twitter.com/AlemTuzlak59192/status/1680538200702369794)
-- [A pattern for chaining nextjs middlewares](https://raphael.badia.cc/posts/a-pattern-for-chaining-middlewares)
-- [Embracing Polymorphism for Flexible Components](https://brightinventions.pl/blog/embracing-polymorphism-for-flexible-components/)
-- [Featurevisor](https://github.com/fahad19/featurevisor) + https://featurevisor.com/docs/react/
-- [rmx-cli](https://github.com/kiliman/rmx-cli)
-- [Legend: The Ultimate React State Manager?](https://www.youtube.com/watch?v=E4TH77SMOG8)
-- [Miško Hevery on Qwik versus React](https://www.youtube.com/watch?v=GHsO0t1_P0M)
-- [What's Next For Redux with Mark Erikson?](https://www.youtube.com/watch?v=n5FK8_EXcbs)
-- [Next.js 13.4.10](https://github.com/vercel/next.js/releases/tag/v13.4.10)
-- [Rewind-UI - React-TailwindCSS component library](https://rewind-ui.dev/)
-- [Remix-Hono](https://github.com/sergiodxa/remix-hono)
-- [Remix-JSON-Routes](https://github.com/brophdawg11/remix-json-routes)
-- [Millionjs 2.5](https://twitter.com/aidenybai/status/1679698685603774464)
+[![How React 18 Improves Application Performance](/emails/issues/152/react18perf.jpg)](https://vercel.com/blog/how-react-18-improves-application-performance)
 
-<Todo />
+**[How React 18 Improves Application Performance](https://vercel.com/blog/how-react-18-improves-application-performance)**
+
+Article visuel très bien illustré et complet sur React 18 et son impact sur les performances. Explique le fonctionnement de Concurrent React et son impacte sur les métriques comme Total Blocking Time et Interaction to Next Paint. Présente également d'autres nouveautés comme Transition API, React Server Components, Suspense et le nouveau cache React.
+
+https://twitter.com/vercel/status/1681358618913046528
+
+---
+
+[![Kuma UI](/emails/issues/152/kuma.jpg)](https://www.kuma-ui.com/)
+
+**[Kuma UI](https://www.kuma-ui.com/)**
+
+Nouvelle librairie CSS-in-JS inspirée de la DX offerte par Chakra UI, et compatible avec les React Server Components. La librairie repose sur une methode unique qui permet d'obtenir le meilleur du zero-runtime CSS-in-JS, et des solutions traditionnelles avec runtime. Il va falloir étudier tout ça, et voir comment cette librairie va se positionner face à [Panda CSS](https://panda-css.com/), librairie proposée par l'auteur de Chakra UI.
+
+https://twitter.com/_poteboy_/status/1678237698371485696
+
+---
+
+- 🐦 [DevRel Matt Carroll rejoined the React team](https://twitter.com/mattcarrollcode/status/1681342638816112641)
+- 👀 [How to Setup Redwood Experimental React Server Components](https://community.redwoodjs.com/t/react-server-components-rsc/5081)
+- 👀 [React-Query-Nextjs](https://twitter.com/TkDodo/status/1680153231853223938): support expérimental de React-Query pour le Next.js App Directory.
+- 📜 [My take on the current React & Server Components controversy](https://phryneas.de/react-server-components-controversy): Lenz aime les React Server Components mais explique sa frustration en tant que mainteneur d'Apollo Client et Redux Toolkit. https://twitter.com/phry/status/1676691019994112004
+- 📜 [Demystifying React Server Components with NextJS 13 App Router](https://demystifying-rsc.vercel.app/): une application demo accompagnée de notes pour expliquer le fonctionnement des Server Components.
+- 📜 [5 Common Pitfalls with Server Components in Next13 (with examples)](https://www.propelauth.com/post/5-common-pitfalls-with-server-components-in-next13-with-examples): article bien illustré présentant 5 erreurs courantes lors d'usage des Server Components.
+- 📜 [Trimming typography with Capsize](https://www.skovy.dev/blog/using-capsize-with-stitches): explique comment normaliser les whitespace autour de vos fonts pour faciliter l'alignement, dans un contexte React.
+- 📜 [SvelteJS: My ecosystem is bigger than yours](https://hackmd.io/@roguegpu/r1RKQMdt3): critique intéressante de React en faveur de Svelte, qui n'a pas autant besoin d'avoir un écosystème.
+- 📜 [Why Server Components - A Brief History of Web](https://www.perssondennis.com/articles/why-server-components-a-brief-history-of-web)
+- 📜 [A Visual Guide to Prefetching in Next.js 13](https://www.builder.io/blog/prefetching-nextjs-visual-guide)
+- 📜 [Autosave form inputs with Remix](https://www.jacobparis.com/content/remix-form-autosave)
+- 📜 [Ariakit is now stable](https://newsletter.ariakit.org/p/stable)
+- 📜 [A pattern for chaining nextjs middlewares](https://raphael.badia.cc/posts/a-pattern-for-chaining-middlewares)
+- 📜 [Embracing Polymorphism for Flexible Components](https://brightinventions.pl/blog/embracing-polymorphism-for-flexible-components/)
+- 📦 [Fresh 1.3 – Simplified Route Components and More](https://twitter.com/deno_land/status/1681340646723039232)
+- 📦 [Next.js 13.4.10](https://github.com/vercel/next.js/releases/tag/v13.4.10)
+- 📦 [Million.js 2.5 - Compile time macros](https://twitter.com/aidenybai/status/1679698685603774464)
+- 📦 [Remix Development Tools](https://twitter.com/AlemTuzlak59192/status/1680538200702369794)
+- 📦 [Remix-Hono](https://github.com/sergiodxa/remix-hono)
+- 📦 [Remix-JSON-Routes](https://github.com/brophdawg11/remix-json-routes)
+- 📦 [Vercel Platforms Starter Kit - Template for building multi-tenant applications using Next.js App Router](https://vercel.com/blog/platforms-starter-kit)
+- 📦 [MDX Editor - WYSIWYG React component for Markdown editing](https://mdxeditor.dev/)
+- 📦 [Rewind-UI - React-TailwindCSS component library](https://rewind-ui.dev/)
+- 📦 [Featurevisor - Git-based Feature flags, with React bindings](https://github.com/fahad19/featurevisor)
+- 🎥 [Tailwind Connect 2023 — Keynote](https://www.youtube.com/watch?v=CLkxRnRQtDE): annonce de Catalyst, un React UI kit
+- 🎥 [Legend: The Ultimate React State Manager?](https://www.youtube.com/watch?v=E4TH77SMOG8)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -110,35 +125,69 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 📱 React-Native {#react-native}
 
-[Expo SDK 49](https://blog.expo.dev/expo-sdk-49-c6d398cdf740)
+[![Expo SDK 49](/emails/issues/152/expo49.jpg)](https://blog.expo.dev/expo-sdk-49-c6d398cdf740)
 
-[Announcing Expo Router v2](https://blog.expo.dev/introducing-expo-router-v2-3850fd5c3ca1)
+**[Expo SDK 49](https://blog.expo.dev/expo-sdk-49-c6d398cdf740)**
 
-https://twitter.com/expo/status/1679236290137690112
+Le nouveau SDK 49 vient de sortir. De nombreuses nouveautés annoncées, dont mes préférées:
+
+- React Native 0.72.3, React Native Web 0.19.6
+- Expo Router v2.0
+- Network debugging, VS Code debugging
+- React devtools built-in
+- Environment variables
+- Local Expo Modules
+- EAS Insights
+
+https://twitter.com/expo/status/1676698114844151808
 
 ---
 
-- [Reflecting on Code Sharing Between React and React Native](https://matthewwolfe.github.io/blog/code-sharing-react-and-react-native)
-- [A new approach to React Native development and team composition](https://itnext.io/a-new-approach-to-react-native-development-and-team-composition-d6e3e3eb5184)
-- [Flashlight measure command](https://twitter.com/almouro/status/1676202443346944000)
-- [react-native-image-colors 2.3 - Expo 49 support](https://github.com/osamaqarem/react-native-image-colors)
-- [react-native-android-widget 0.7 - Expo 49 support](https://github.com/sAleksovski/react-native-android-widget)
-- [RNR 271 - RN From a Flutter Dev's Perspective](https://reactnativeradio.com/episodes/rnr-271-rn-from-a-flutter-devs-perspective)
-- [Theo about Airbnb sunsetting React-Native](https://www.youtube.com/watch?v=ZM8lJIJb2Q4)
+[![Announcing Expo Router v2](/emails/issues/152/exporouter2.jpg)](https://blog.expo.dev/introducing-expo-router-v2-3850fd5c3ca1)
+
+**[Announcing Expo Router v2](https://blog.expo.dev/introducing-expo-router-v2-3850fd5c3ca1)**
+
+Avec le SDK 49, Expo annonce également la sortie d'Expo Router en v2 avec de nombreuses améliorations, dont:
+
+- TypeScript support
+- Static routes, SEO, Head metadata
+- Async routes
+- Universal Linking, handoff
+- CSS and Styling
+
+https://twitter.com/Baconbrix/status/1676688887966740480
+
+---
+
+- 📜 [Reflecting on Code Sharing Between React and React Native](https://matthewwolfe.github.io/blog/code-sharing-react-and-react-native)
+- 📜 [A new approach to React Native development and team composition](https://itnext.io/a-new-approach-to-react-native-development-and-team-composition-d6e3e3eb5184)
+- 📦 [React-Native 0.72.3](https://github.com/facebook/react-native/releases/tag/v0.72.3)
+- 📦 [Flashlight 0.8 - measure command](https://twitter.com/almouro/status/1676202443346944000)
+- 📦 [react-native-image-colors 2.3 - Expo 49 support](https://github.com/osamaqarem/react-native-image-colors)
+- 📦 [react-native-android-widget 0.7 - Expo 49 support](https://github.com/sAleksovski/react-native-android-widget)
+- 🎙️ [RNR 271 - RN From a Flutter Dev's Perspective](https://reactnativeradio.com/episodes/rnr-271-rn-from-a-flutter-devs-perspective)
+- 🎥 [Expo SDK 49: New Features and Improvements](https://www.youtube.com/watch?v=1CVlTqHW5xQ)
+- 🎥 [Theo on Airbnb sunsetting React-Native](https://www.youtube.com/watch?v=ZM8lJIJb2Q4)
+- 🎥 [Top 9 React Native UI Component Libraries in 2023](https://www.youtube.com/watch?v=SfJGBbv-qQw)
 
 ## 🧑‍💻 Jobs {#jobs}
 
-<Todo />
+🧑‍💼 [**Shotgun - Senior Full Stack Engineer - 60-75k€ + BSPCE**](https://shotgun.teamtailor.com/jobs/1981578-senior-full-stack-engineer)
+
+Shotgun est la billetterie des évènements electro. Nous recherchons des devs expérimentés pour travailler sur une stack moderne: React, React-Native, Typescript, GraphQL, NextJS, PgSQL, Vercel...
+
+🧑‍💼 [**Premier Octet - Développeurs(euses) React - Paris**](https://www.premieroctet.com/jobs)
+
+Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendrez en développement sur des projets variés et motivants, à la fois serveur et front (React, Nest, Next), et éventuellement mobile (React Native).
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
-
-🏢 **[Vous recrutez en CDI ou freelance? Contactez-moi!](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-- [Comment faire la veille techno, en tant que dev ?](https://www.youtube.com/watch?v=zED1-b3UJE8)
+- 🎥 [Comment faire la veille techno, en tant que dev ?](https://www.youtube.com/watch?v=zED1-b3UJE8)
+- 🎥 [Lightning CSS sur Vite v4.4.0 - Actus JS de la semaine](https://www.youtube.com/watch?v=dFz550aUGew&t=1s)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -156,26 +205,17 @@ https://twitter.com/expo/status/1679236290137690112
 
 - [Updates from the 97th TC39 meeting](https://dev.to/hemanth/updates-from-the-97th-tc39-meeting-1cnj)
 - [What’s Next for JavaScript: New Features to Look Forward to](https://thenewstack.io/whats-next-for-javascript-new-features-to-look-forward-to/)
-- [Beyond Browsers: The Longterm Future of JavaScript Standards](https://thenewstack.io/beyond-browsers-the-longterm-future-of-javascript-standards/)
-- [StackBlitz - npm, yarn and pnpm are now supported natively in WebContainers](https://blog.stackblitz.com/posts/announcing-native-package-manager-support/)
-- [In Defence of DOMContentLoaded](https://csswizardry.com/2023/07/in-defence-of-domcontentloaded/)
+- [Prisma 5: Faster by Default](https://www.prisma.io/blog/prisma-5-f66prwkjx72s)
+- [Deno 1.35: A fast and convenient way to build web servers](https://deno.com/blog/v1.35)
 - [Prettier 3.0](https://prettier.io/blog/2023/07/05/3.0.0.html)
 - [TypeScript-ESLint v6](https://typescript-eslint.io/blog/announcing-typescript-eslint-v6/)
 - [Node v20.4](https://nodejs.org/en/blog/release/v20.4.0)
-- [Deno 1.35: A fast and convenient way to build web servers](https://deno.com/blog/v1.35)
-- [Prisma 5: Faster by Default](https://www.prisma.io/blog/prisma-5-f66prwkjx72s)
 - [Vite 4.4](https://twitter.com/vite_js/status/1676886213771264002)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/BHolmesDev/status/1677751235959480321
-
-https://twitter.com/Pungeon__Mast/status/1676653344826490880
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/152/meme.jpg)](https://twitter.com/jantimon/status/1681275581629964300)
 
 A plus 👋
