--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -9,9 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-Je rentre de vacances, on couvre donc 2 semaines d'actualités dans cette édition.
+Je rentre juste de mes vacances en Bretagne 😎, on couvre donc 2 semaines d'actualités dans cette édition.
 
-Je pensais que l'été serait calme, mais il y a eu pas mal de sorties! 😄
+Je pensais que l'été serait calme, mais il y a eu pas mal de sorties nombreux articles sur les Server Components! 😄
 
 Je cherche toujours un [**stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler!
 
@@ -56,7 +56,7 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 **[How React 18 Improves Application Performance](https://vercel.com/blog/how-react-18-improves-application-performance)**
 
-Article visuel très bien illustré et complet sur React 18 et son impact sur les performances. Explique le fonctionnement de Concurrent React et son impacte sur les métriques comme Total Blocking Time et Interaction to Next Paint. Présente également d'autres nouveautés comme Transition API, React Server Components, Suspense et le nouveau cache React.
+Article complet et très bien illustré sur React 18 et son impact sur les performances. Explique le fonctionnement de Concurrent React et son impacte sur les métriques comme Total Blocking Time et Interaction to Next Paint. Présente également d'autres nouveautés comme Transition API, React Server Components, Suspense et le nouveau cache React.
 
 https://twitter.com/vercel/status/1681358618913046528
 
@@ -76,7 +76,7 @@ https://twitter.com/_poteboy_/status/1678237698371485696
 - 👀 [How to Setup Redwood Experimental React Server Components](https://community.redwoodjs.com/t/react-server-components-rsc/5081)
 - 👀 [React-Query-Nextjs](https://twitter.com/TkDodo/status/1680153231853223938): support expérimental de React-Query pour le Next.js App Directory.
 - 📜 [My take on the current React & Server Components controversy](https://phryneas.de/react-server-components-controversy): Lenz aime les React Server Components mais explique sa frustration en tant que mainteneur d'Apollo Client et Redux Toolkit. https://twitter.com/phry/status/1676691019994112004
-- 📜 [Demystifying React Server Components with NextJS 13 App Router](https://demystifying-rsc.vercel.app/): une application demo accompagnée de notes pour expliquer le fonctionnement des Server Components.
+- 📜 [Demystifying React Server Components with NextJS 13 App Router](https://demystifying-rsc.vercel.app/): une belle application demo accompagnée de notes pour expliquer le fonctionnement des Server Components, incluant de nombreux exemples.
 - 📜 [5 Common Pitfalls with Server Components in Next13 (with examples)](https://www.propelauth.com/post/5-common-pitfalls-with-server-components-in-next13-with-examples): article bien illustré présentant 5 erreurs courantes lors d'usage des Server Components.
 - 📜 [Trimming typography with Capsize](https://www.skovy.dev/blog/using-capsize-with-stitches): explique comment normaliser les whitespace autour de vos fonts pour faciliter l'alignement, dans un contexte React.
 - 📜 [SvelteJS: My ecosystem is bigger than yours](https://hackmd.io/@roguegpu/r1RKQMdt3): critique intéressante de React en faveur de Svelte, qui n'a pas autant besoin d'avoir un écosystème.
