--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -57,8 +57,6 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 Article complet et très bien illustré sur React 18 et son impact sur les performances. Explique le fonctionnement de Concurrent React et son impacte sur les métriques comme Total Blocking Time et Interaction to Next Paint. Présente également d'autres nouveautés comme Transition API, React Server Components, Suspense et le nouveau cache React.
 
-https://twitter.com/vercel/status/1681358618913046528
-
 ---
 
 [![Kuma UI](/emails/issues/152/kuma.jpg)](https://www.kuma-ui.com/)
@@ -67,14 +65,12 @@ https://twitter.com/vercel/status/1681358618913046528
 
 Nouvelle librairie CSS-in-JS inspirée de la DX offerte par Chakra UI, et compatible avec les React Server Components. La librairie repose sur une methode unique qui permet d'obtenir le meilleur du zero-runtime CSS-in-JS, et des solutions traditionnelles avec runtime. Il va falloir étudier tout ça, et voir comment cette librairie va se positionner face à [Panda CSS](https://panda-css.com/), librairie proposée par l'auteur de Chakra UI.
 
-https://twitter.com/_poteboy_/status/1678237698371485696
-
 ---
 
 - 🐦 [DevRel Matt Carroll rejoined the React team](https://twitter.com/mattcarrollcode/status/1681342638816112641)
 - 👀 [How to Setup Redwood Experimental React Server Components](https://community.redwoodjs.com/t/react-server-components-rsc/5081)
 - 👀 [React-Query-Nextjs](https://twitter.com/TkDodo/status/1680153231853223938): support expérimental de React-Query pour le Next.js App Directory.
-- 📜 [My take on the current React & Server Components controversy](https://phryneas.de/react-server-components-controversy): Lenz aime les React Server Components mais explique sa frustration en tant que mainteneur d'Apollo Client et Redux Toolkit. https://twitter.com/phry/status/1676691019994112004
+- 📜 [My take on the current React & Server Components controversy](https://phryneas.de/react-server-components-controversy): Lenz aime les React Server Components mais explique sa frustration en tant que mainteneur d'Apollo Client et Redux Toolkit.
 - 📜 [Demystifying React Server Components with NextJS 13 App Router](https://demystifying-rsc.vercel.app/): une belle application demo accompagnée de notes pour expliquer le fonctionnement des Server Components, incluant de nombreux exemples.
 - 📜 [5 Common Pitfalls with Server Components in Next13 (with examples)](https://www.propelauth.com/post/5-common-pitfalls-with-server-components-in-next13-with-examples): article bien illustré présentant 5 erreurs courantes lors d'usage des Server Components.
 - 📜 [Trimming typography with Capsize](https://www.skovy.dev/blog/using-capsize-with-stitches): explique comment normaliser les whitespace autour de vos fonts pour faciliter l'alignement, dans un contexte React.
@@ -138,8 +134,6 @@ Le nouveau SDK 49 vient de sortir. De nombreuses nouveautés annoncées, dont me
 - Local Expo Modules
 - EAS Insights
 
-https://twitter.com/expo/status/1676698114844151808
-
 ---
 
 [![Announcing Expo Router v2](/emails/issues/152/exporouter2.jpg)](https://blog.expo.dev/introducing-expo-router-v2-3850fd5c3ca1)
@@ -153,8 +147,6 @@ Avec le SDK 49, Expo annonce également la sortie d'Expo Router en v2 avec de no
 - Async routes
 - Universal Linking, handoff
 - CSS and Styling
-
-https://twitter.com/Baconbrix/status/1676688887966740480
 
 ---
 
