--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/152/index.mdx
@@ -10,7 +10,7 @@ Salut à tous !
 
 Je rentre juste de mes vacances en Bretagne 😎, on couvre donc 2 semaines d'actualités dans cette édition.
 
-Je pensais que l'été serait calme, mais il y a eu pas mal de sorties nombreux articles sur les Server Components! 😄
+Je pensais que l'été serait calme, mais il y a eu pas mal de sorties et de nombreux articles sur les Server Components! 😄
 
 Je cherche toujours un [**stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler!
 
