--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/153/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/153/index.mdx
@@ -77,9 +77,16 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 Pas de contenu cette semaine 😅
 
+<Todo />
+
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
+[![Premier Octet](/emails/issues/151/premieroctet.png)](https://www.premieroctet.com/?utm_source=react_hebdo)
+
+💸 **[Premier Octet - Agence de développement React](https://www.premieroctet.com/?utm_source=react_hebdo)**
+
+Agence parisienne fondée en 2018 par une équipe de passionnés, nous accompagnons de nombreux clients grâce à notre expertise React et React Native.
+Nous intervenons en développement, conseil, audit ou formation, sur des thématiques JavaScript serveur et front.
 
 ---
 
