--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/153/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/153/index.mdx
@@ -42,7 +42,24 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [TanStack Query v5 beta - migration guide](https://tanstack.com/query/v5/docs/react/guides/migrating-to-v5)
+- [Remix 1.19](https://github.com/remix-run/remix/releases/tag/remix%401.19.0)
+- [Write Clean Server-Side React Code with Higher-Order Server Components](https://medium.com/@burkayanduv/write-clean-server-side-react-code-with-higher-order-server-components-2b0e8df45008)
+- [forwardRef type fix that works with generics](https://twitter.com/sebastienlorber/status/1683753462058610688)
+- [Origins of JSX and Why It Exists](https://dodov.dev/blog/origins-of-jsx-and-why-it-exists) ???
+- [Dan Abramov leaves his job at Meta, but remains in the React core team](https://twitter.com/dan_abramov/status/1682029195843739649)
+- [Meta is hiring a React DX Engineering Manager (London)](https://twitter.com/sebastienlorber/status/1683529524414148608)
+- [Why Panda: CSS for RSCs is Changing the Game](https://www.youtube.com/watch?v=fKSemrudovo)
+- [An In-Depth Look at React Server Components!](https://blog.saeloun.com/2023/07/20/what-are-react-server-components/)
+- [Lazy Loading in React and Next.js Apps](https://www.fullctx.dev/p/lazy-loading-in-react-and-nextjs)
+- [Tailwind Connect 2023 Recap](https://tailwindcss.com/blog/2023-07-18-tailwind-connect-2023-recap): résumé de la conf qui présente également Catalyst, le React UI Kit en cours de développement.
+- [Storybook 7.1](https://storybook.js.org/blog/storybook-7-1/)
+- [Sidebar animation performance](https://www.joshuawootonn.com/sidebar-animation-performance)
+- [How to Build a Routing Layer in React and Why You Need It](https://semaphoreci.com/blog/routing-layer-react)
+- [The Cost Of JavaScript - 2023](https://www.youtube.com/watch?v=ZKH3DLT4BKw) ???
+- [Astro v2.9 - View Transitions](https://github.com/withastro/astro/releases/tag/astro%402.9.0) + https://twitter.com/BHolmesDev/status/1682206832423579649 + https://github.com/withastro/astro/releases/tag/astro%402.9.0
+- [Downshift v8 - breaking changes](https://github.com/downshift-js/downshift/blob/master/src/hooks/MIGRATION_V8.md)
+- [Redwood v6.0.0 RC](https://community.redwoodjs.com/t/redwood-v6-0-0-rc-is-now-available/5044)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -70,7 +87,10 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [Redefining Navigation in React Native: the Potential of expo-router](https://www.bam.tech/en/article/redefining-navigation-in-react-native-the-potential-of-expo-router)
+- [The React Native Show Podcast #24 - React Native at scale with Jacob Suñol (Abbott)](https://www.youtube.com/watch?v=tGGa885ycrg)
+- [React Native EU 2023 Trailer](https://www.youtube.com/watch?v=-fL7wZDKSEE)
+- [Debugging React Native Apps End-to-End: AMA with Experts from Meta and Sentry - 26 July](https://sentry.io/resources/ama-debugging-react-native-apps-end-to-end/)
 
 ---
 
@@ -86,9 +106,7 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
-
-<Todo />
+- [ReactJS et NextJS pour les nuls : useRef, useContext, useMemo, useCallback & useReducer!](https://www.youtube.com/watch?v=LKAQ5LNut8s)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -103,7 +121,14 @@ Nous intervenons en développement, conseil, audit ou formation, sur des thémat
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Node.js Best Practices List - 2023 update](https://twitter.com/nodepractices/status/1683835221840654337)
+- [Bun 0.7 - Improved Node.js compat, Vite support, Worker, AsyncLocalStorage...](https://bun.sh/blog/bun-v0.7.0)
+- [Introducing Valibot, a < 1kb Zod Alternative](https://www.builder.io/blog/introducing-valibot)
+- [pkg-size - Find the true size of an npm package (thanks to WebContainers)](https://twitter.com/privatenumbr/status/1681206731127554048)
+- [How Turborepo is porting from Go to Rust](https://vercel.com/blog/how-turborepo-is-porting-from-go-to-rust)
+- [5 Inconvenient Truths about TypeScript](https://oida.dev/5-truths-about-typescript/)
+- [TypeScript and the dawn of gradual types](https://github.com/readme/featured/typescript-gradual-types)
+- [Microsoft TypeChat - Helps get TypeScript type-safe reponses from AI / LLM](https://microsoft.github.io/TypeChat/blog/introducing-typechat)
 
 ---
 
